added to k-m writeup

--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -396,7 +396,9 @@ The Kaplan-Meier curves for the variable gender shows that females have a statis
 
 In order to determine whether there was an effect for age, we categorized an individual's age to  be low (<40) or high (>=40). The Kaplan-Meier curves for this variable show a distinguished difference in the risk of death for the two groups. Namely, individuals who are 40 or older have a statistically significant increased risk of death. Furthermore, as time passes, this difference increases further; in other words, as time passes individuals who are 40 or older have an increasing risk of dying when compared to those under the age of 40. Contextually, this is a reasonable outcome as individuals who are older are more likely to die than their juniors.
 
-The Kaplan-Meier curves for congestive heart failure (CHF) severity indicate that individuals who never experienced CHF have the least risk of dying than those have had CHF. Moreover, the risk of dying increases as CHF severity increases. Intuitively, this is a feasible outcome as individuals with the most severe CHF are characterized by an "inability to perform any physical activity without discomfort" and potential discomfort while resting; logically, individuals who experience this level of pain are at higher risk of dying than those with less severe symptoms. We also found significant increased risk in dying associated with high levels of creatinine and LDL and lower levels of cholesterol.
+The Kaplan-Meier curves for congestive heart failure (CHF) severity indicate that individuals who never experienced CHF have the least risk of dying than those have had CHF. Moreover, the risk of dying increases as CHF severity increases. Intuitively, this is a feasible outcome as individuals with the most severe CHF are characterized by an "inability to perform any physical activity without discomfort" and potential discomfort while resting; logically, individuals who experience this level of pain are at higher risk of dying than those with less severe symptoms. 
+
+In order to clearly depict the differences in survival rates for individuals based on their serum creatinine levels, total cholesterol, and low density lipid cholesterol, we categorised the values by quantile and built Kaplan-Meier curves accordingly. The results indicate that individuals with a most recent serum creatinine level >= 1.3 mg/dL have an increased risk of dying when compared to individuals with a lesser serum creatinine level. Medical research supports this result as serum creatinine is is a breakdown product that in high levels is indicative of poor renal health. While the survival rates for individuals with total cholesterol >= 77 mg/dL were somewhat similar, the probability of survival for individuals below that threshold is significantly lower over time. Interestingly, as time passes (past time = 7500), the results change slightly, with the probability of survival for individuals with greater than median total cholesterol level falling below that of individuals below the median. The Kaplan-Meier curves for the low density lipid cholesterol in fact show similar, but less clear, results to the curves for total cholesterol. Given that total cholesterol is a function of high density lipid and low density cholesterol this result is feasible.
 
 We will explore these relationships further using Cox proportional hazards regression modelling. Hopefully, the Cox regression methodology will provide more insight into how these differences in risk of dying manifest at a more granular level.
 
