--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -167,23 +167,12 @@ missing_plot = ggplot(cardio_nas, aes(x = colnames.cardio., y = cardio_na_p, fil
   coord_flip()
 ```
 
-We see several variables with missing data rates over 50 percent, and many more in the ~20-40% range.
-
-Most instances of large missing data are for events that likely never occurred, such as all the "days to first subsequent" variables like DSSTROKE (having a stroke in the future) and DSMI (having a non-fatal myocardianl infarction in the future), or "days to closest previous" variables like DPCABG (having a previous coronary artery bypass surgery).
-
-On the other hand, some variables with a significant amount of missing data do not have easily interpretable explanations. For example laboratory measurements such as LDL_R, HDL_R, and TOTCHOL_R have significant proportions of missing data, but there is no straightforward explanation to why these measurements may not have been recorded for certain patients.  
-
-We see several variables with missing data rates over 50 percent, and many more in the ~20-40% range. 
 ```{r,echo=FALSE}
 # md.pattern(cardio %>% dplyr::select(DSSTROKE, DSMI))
 # cardio_aggr <- aggr(cardio,col=mdc(1:2),numbers=TRUE,sortVars=TRUE,
 # labels=names(cardio),cex.axis=.7, gap=3, 
 # ylab=c("Proportion missing","Missingness Pattern"))
 ```
-
-Most instances of large missing data are for events that likely never occurred, such as all the "days to first subsequent" variables like DSSTROKE (having a stroke in the future) and DSMI (having a non-fatal myocardianl infarction in the future), or "days to closest previous" variables like DPCABG (having a previous coronary artery bypass surgery).
-
-On the other hand, some variables with a significant amount of missing data do not have easily interpretable explanations. For example laboratory measurements such as LDL_R, HDL_R, and TOTCHOL_R have significant proportions of missing data, but there is no straightforward explanation to why these measurements may not have been recorded for certain patients.  
 
 
 ```{r, fig.height=3, fig.width=7}
@@ -217,11 +206,10 @@ ggsave("output/missing_eda.png", grid.arrange(missing_plot, deaths_v_missing, nr
 ![](output/missing_eda.png)
 
 We see several variables with missing data rates over 50 percent, and many more in the ~20-40% range. Most instances of large missing data are for events that likely never occurred, such as all the "days to first subsequent" variables like DSSTROKE (having a stroke in the future) and DSMI (having a non-fatal myocardianl infarction in the future), or "days to closest previous" variables like DPCABG (having a previous coronary artery bypass surgery).On the other hand, some variables with a significant amount of missing data do not have easily interpretable explanations. For example laboratory measurements such as LDL_R, HDL_R, and TOTCHOL_R have significant proportions of missing data, but there is no immediate explanation to why these measurements may not have been recorded for certain patients.  
-</br>
-</br>
+
 In order to investigate how missing data affects the outcome of death, we plotted the percentage of deaths in every variable for the subset where data on the variable is missing, and the subset where data on the variable is observed. Through the graph, we can notice that five specific variables: CHFSEV, CREATININE_R, PULSE_R, S3, and TOTCHOL_R have particularly large differences in percentage deaths for their observed versus missing subsets. For all five variables, there was a higher percentage of deaths for the subset of data that is missing. This suggests that for these variables, there is a possibility that data may be MAR (missing at random), since missingness is related to death, an observed variable. 
 
-```{r, fig.width=7, fig.height=3, dev = "png"}
+```{r, fig.width=7, fig.height=3}
 par(mfrow = c(1,3))
 marginplot(cardio[, c("CREATININE_R", "DAYS2LKA")], col = mdc(1:2), cex.numbers = 0.4, pch = 1)
 marginplot(cardio[, c("S3", "DAYS2LKA")], col = mdc(1:2), cex.numbers = 0.4, pch = 1)
@@ -249,7 +237,7 @@ Through examining the variables with the highest proportion of missing data with
 
 2) When looking at LDL_R, HDL_R, TOTCHOL_R, and CREATININE_R, the variables excluding CREATININE_R have missing values together 37% of the time, and all four are missing 24% of the time. We continue to investigate this in the following graphs.
 
-```{r, fig.width=7, fig.height=3, dev = "png"}
+```{r, fig.width=7, fig.height=3}
 par(mfrow = c(1,4))
 marginplot(cardio[, c("CREATININE_R", "YRCATH_G")], col = mdc(1:2), cex.numbers = 0.4, pch = 1)
 marginplot(cardio[, c("TOTCHOL_R", "YRCATH_G")], col = mdc(1:2), cex.numbers = 0.4, pch = 1)
@@ -259,15 +247,11 @@ marginplot(cardio[, c("LDL_R", "YRCATH_G")], col = mdc(1:2), cex.numbers = 0.4, 
 
 Through these margin plots, we can see there is a significant non-overlap in the distribution of YRCATH_G (year of catetherization) data depending on whether the laboratory measurements were missing versus observed. The majority of missing data on all these laboratory measurements comes from early years, while all the observed data comes from later years. A likely explanation is that these laboratory procedures were less common or accessible in the earlier years which would mean that this data is missing at random (MAR). 
 
-
-
 In summary, through these exploratory data analysis and missing data visualizations, we can determine that significant portions of missing data are due to either events that never occurred and therefore cannot be recorded, possible negligence in recording certain measurements (MCAR), and reasons that depend on other observed variables, such as less accessible laboratory procedures in earlier years leading to missing data (MAR). We also note that year of catetherization and age of patient are important variables that have especially significant effects towards death. 
-
 
 ## Build Model
 
 In order to build a model to determine factors associated with survival, we first explored relationships in isolation using Kaplan-Meier curves. We then selected medically relevant variables and variables we found to be significant through our Kaplan-Meier analysis and used those to do Cox proportional hazards regression modeling. These variables included demographic data, data on the severity of heart conditions, and selected lab data. Finally, we used MICE to impute missing data, and created a cox model on our imputed data set to evaluate the impact of missing data.
-
 
 ```{r, fig.height= 15, fig.width = 7}
 # select data we want
